syntax = "proto3";
package mnf.v1;


//import "google.golang.org/genproto/googleapis/api/annotations.proto";
//import "google/api/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "/home/ppri/go/pkg/mod/github.com/gogo/protobuf@v1.3.1/protobuf/google/protobuf/timestamp.proto";
import "timestamp.proto";
// service definition

option go_package = "api/mnf/v1;mnf";
//option go_package = "google.golang.org/genproto/googleapis/api/annotations;annotations";

service PartService {

  rpc CreatePart(CreatePartRequest) returns (CreatePartResponse) {
  //  option (google.api.http) ={
  //      post: "/v1/part"
  //      body: "item"
  //  };
 }
  rpc CreateParts(CreatePartsRequest) returns (CreatePartsResponse) {
  //  option (google.api.http) ={
  //      post: "/v1/part/bulk"
  //      body: "*"
  //  };
 }

  rpc GetPart(GetPartRequest) returns (GetPartResponse) {
   // option (google.api.http) ={
   //     get: "/v1/part/{id}"
   // };
 }

  rpc ListPart(ListPartRequest) returns (ListPartResponse) {
   // option (google.api.http)={
   //     get: "/v1/part"
   // };
 }

  rpc DeletePart(DeletePartRequest) returns (DeletePartResponse) {
   // option (google.api.http) ={
   //     delete: "/v1/part/{id}"
   // };
 }
  rpc UpdatePart(UpdatePartRequest) returns (UpdatePartResponse) {
   // option (google.api.http) ={
   //     put: "/v1/part"
   //     body: "item"
   // };
 }

  rpc UpdateParts(UpdatePartsRequest) returns (UpdatePartsResponse) {
   // option (google.api.http) ={
   //     put: "/v1/part/bulk"
   //     body: "*"
   // };
 }
}

service MnfService {

  rpc CreateMnf(CreateMnfRequest) returns (CreateMnfResponse) {
   // option (google.api.http) ={
   //     post: "/v1/mnf"
   //     body: "item"
   // };
 }
  rpc CreateMnfs(CreateMnfsRequest) returns (CreateMnfsResponse) {
   // option (google.api.http) ={
   //     post: "/v1/mnf/arr"
   //     body: "*"
   // };
 }
  rpc GetMnf(GetMnfRequest) returns (GetMnfResponse) {
   // option (google.api.http) ={
   //     get: "/v1/mnf/{id}"
   // };
 }

  rpc ListMnf(ListMnfRequest) returns (ListMnfResponse) {
   // option (google.api.http)={
   //     get: "/v1/mnf"        
   // };
}
  rpc DeleteMnf(DeleteMnfRequest) returns (DeleteMnfResponse) {
   // option (google.api.http) ={
   //     delete: "/v1/mnf/{id}"
   // };
 }

  rpc UpdateMnf(UpdateMnfRequest) returns (UpdateMnfResponse) {
   // option (google.api.http) ={
   //     put: "/v1/mnf"
   //     body: "item"
   // };
 }
  rpc UpdateMnfs(UpdateMnfsRequest) returns (UpdateMnfsResponse) {
   // option (google.api.http) ={
   //     put: "/v1/mnf/bulk"
   //     body: "*"
   // };
 }                                                             }

// message type definitions


message Part {
   string id = 1;
   string mnf_id = 2;
   string vendor_code = 3;

  // @inject_tag: sql:"type:timestamptz,default:now()"
  google.protobuf.Timestamp created_at = 4;

  // @inject_tag: sql:"type:timestamptz"
  google.protobuf.Timestamp deleted_at = 5;
}

message CreatePartRequest {
  Part item = 1;
}

message CreatePartResponse {
    string id = 1;
}

message CreatePartsRequest {
  repeated Part items = 1;
}

message CreatePartsResponse {
    repeated string ids =1;
}

message GetPartRequest {
  string id = 1;
}

message GetPartResponse {
    Part item = 1;

}
message ListPartRequest {
    int32 limit =1;

}
message ListPartResponse {
  repeated Part items = 1;
}

message DeletePartRequest {
    string id = 1;
}

message DeletePartResponse {
    string ststus = 1;
}

message UpdatePartRequest {
  Part item = 1;
}

message UpdatePartResponse {
    string status = 1;
}

message UpdatePartsRequest {
    repeated Part items = 1;
}

message UpdatePartsResponse {
    string status = 1;
}

message Mnf {
  string id = 1;
  string name = 2;

  // @inject_tag: sql:"type:timestamptz,default:now()"
    google.protobuf.Timestamp created_at = 3;
}
message CreateMnfRequest {
      Mnf item = 1;
}

message CreateMnfResponse {
    string id = 1;
}

message CreateMnfsRequest {
  repeated Mnf items = 1;
}

message CreateMnfsResponse {
    repeated string ids =1;
}

message GetMnfRequest {
  string id = 1;
}

message GetMnfResponse {
    Mnf item = 1;

}
message ListMnfRequest {
    int32 limit =1;

}
message ListMnfResponse {
  repeated Mnf items = 1;
}

message DeleteMnfRequest {
    string id = 1;
}

message DeleteMnfResponse {
    string ststus = 1;
}

message UpdateMnfRequest {
  Mnf item = 1;
}

message UpdateMnfResponse {
    string status = 1;
}

message UpdateMnfsRequest {
    repeated Mnf items = 1;
}

message UpdateMnfsResponse {
    string status = 1;
}

